--- a/src/style.css
+++ b/src/style.css
@@ -245,10 +245,10 @@ nav {
 }
 @keyframes scale {
   0% {
-    transform: scale(0.4);
+    transform: scale(0.4, 0.4);
   }
   100% {
-    transform: scale(1);
+    transform: scale(1, 1);
   }
 }
 
@@ -258,8 +258,8 @@ nav {
   opacity: 1;
 }
 
-.overlay-content {
-  animation: 200ms scale;
+.overlay-visible .overlay-content {
+  animation: 300ms scale;
 }
 
 .chat-preview {
