add button icons

--- a/src/style.css
+++ b/src/style.css
@@ -165,14 +165,22 @@ button {
   font: inherit;
   margin: 0;
   display: block;
-  font-weight: bold;
+  font-weight: 500;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 .button-content {
-  padding: 0 1rem;
-  min-width: 6rem;
+  padding: 0 0.5rem;
+  min-width: 4rem;
+}
+
+button svg {
+  fill: #fff;
+  height: 30px;
+  display: block;
+  margin: auto;
+  margin-bottom: 8px;
 }
 
 button:first-child {
